# connect-four

./: .gitignore  README.md  TEST_COMMANDS.md  babel.config.js  connect-four.code-workspace  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
ai/: .gitignore  README.md  example.py  pyproject.toml  setup.sh
ai/src/connect_four_ai/: __init__.py  ai.py  cli.py  game.py  train.py  train_new.py
ai/src/connect_four_ai/alphazero/: __init__.py  agent.py  config.py  evaluator.py  game.py  mcts.py  network.py  onnxalphazeronetwork.py  trainer.py
ai/src/connect_four_ai/models/: alphazero-network-model.onnx  results_summary.txt
ai/src/connect_four_ai/models/bak/: alphazero-network-model.onnx  results_summary.txt
ai/src/connect_four_ai/models/checkpoints/: config.json  log-actor-0.txt  log-actor-1.txt  log-actor-2.txt  log-actor-3.txt  log-evaluator-0.txt  log-evaluator-1.txt  log-evaluator-2.txt  log-evaluator-3.txt  log-learner.txt
ai/tests/: test_ai.py  test_game.py
robot/: .gitignore  ARM_DECISION_LOG.md  CLAUDE.md  FIRST_TASK_CHECKLIST.md  PROJECT_PLAN.md  README.md  ROBOT_PLAN.md  ROBOT_PLAN_ALT.md  ROBOT_TRAINING_PLAN.md  SESSION_STATUS.md  TRAINING_PLAN.md  VLA_FINETUNING_PLAN.md  ai_player.py  board_detector.py  board_detector_v2.py  board_detector_yolo.py  camera_feed.py  connect_four_piece_chute.scad  connect_four_piece_edge_nest.scad  connect_four_piece_magazine.stl  connect_four_piece_magazine_gpt.scad  connect_four_piece_single_nest.scad  connect_four_piece_tray.scad  connect_four_top_grab_chute copy.scad  connect_four_top_grab_chute copy.stl  connect_four_top_grab_chute.scad  dataset_schema.md  export_training_images.py  game_loop.py  game_loop_stable_seconds.py  game_loop_v2.py  generate_test_images.py  merge_datasets.sh  record_first_dataset.sh  record_voice_monitor.py  replay_test.py  requirements.txt  send_key.py  send_key.sh  teleop.sh  (+7 more)
robot/test_cases/case_phantom_face_startup/: expected.json
robot/test_images/: board_early_game.json  board_early_game_noisy.json  board_empty.json  board_empty_noisy.json  board_first_move.json  board_first_move_noisy.json  board_mid_game.json  board_mid_game_noisy.json  board_nearly_full.json  board_nearly_full_noisy.json  board_red_wins_diagonal.json  board_red_wins_diagonal_noisy.json  board_red_wins_horizontal.json  board_red_wins_horizontal_noisy.json  board_yellow_wins_vertical.json  board_yellow_wins_vertical_noisy.json
robot/training_data/yolo_finetune/: README.roboflow.txt  data.yaml
robot/yolo-detect/: CLAUDE.md  app.py
robot/yolo-detect/templates/: index.html
ros2_ws/src/connect_four_arm/: CMakeLists.txt  package.xml
ros2_ws/src/connect_four_arm/config/: connect_four.rviz  connect_four_controllers.yaml  connect_four_moveit_controllers.yaml  joint_limits.yaml  panda.rviz  pilz_industrial_motion_planner_planning.yaml  ur5e_with_gripper.srdf.xacro
ros2_ws/src/connect_four_arm/launch/: column_mover.launch.py  connect_four.launch.py  connect_four_moveit.launch.py  connect_four_sim.launch.py  view_panda.launch.py
ros2_ws/src/connect_four_arm/scripts/: column_mover.py  piece_detector.py
ros2_ws/src/connect_four_arm/urdf/: robotiq_gz.ros2_control.xacro  ur5e_with_gripper.urdf.xacro
ros2_ws/src/connect_four_arm/worlds/: connect_four.world
src/: App.css  index.css
src/components/: Board.css  Board.jsx  Cell.css  Cell.jsx  Cell.test.jsx
src/game/: connectFour.test.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: alphazero-network-model-onnx.onnx.bak  alphazero-network-model.onnx  manifest.json  robots.txt  sitemap.xml
web/src/: App.css  App.jsx  index.css
web/src/components/: AI.jsx  Board.css  Board.jsx  Board.test.jsx  Cell.css  Cell.jsx  PlayerMenu.jsx
web/src/game/: connectFour.js  (+1 more)
(+206 files in other folders)
