[tool.poetry]
name = "connect-four-ai"
version = "0.1.0"
description = "AI library for Connect Four game"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "connect_four_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.5"
# OpenSpiel core dependencies
absl-py = ">=0.10.0"
attrs = ">=19.3.0"
ml-collections = ">=0.1.1"
numpy = ">=1.21.5"
scipy = ">=1.10.1"
open-spiel = "1.6.1"
# PyTorch and deep learning
torch = "^2.0.0"
# Visualization and plotting
matplotlib = "^3.7.0"
# Jupyter/IPython support
ipython = "^8.0.0"
# Additional utilities
codetiming = "1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
connect-four-ai = "connect_four_ai.cli:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
