[tool.poetry]
name = "connect-four-ai"
version = "0.1.0"
description = "AI library for Connect Four game"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "connect_four_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.5"
# Core numerical and scientific computing
numpy = ">=1.21.5"
scipy = ">=1.10.1"
# PyTorch and deep learning
torch = "^2.0.0"
# ONNX support for model inference
onnx = "^1.15.0"
onnxruntime = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
